# mlcsp-data

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
csp/: __init__.py  base.py  data.py
csp/models/: __init__.py  blue_pengiun.py  water_rail.py
data/: README.md
notebooks/: Debug.ipynb
scripts/: train.py
