[tool.poetry]
name = "csp"
version = "0.1.0"
description = "Machine Learning for Cycliostationary Signal Processing Data: The Challenge"
authors = ["Gregory Ditzler <gregory.ditzler@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gditzler/mlcsp-data"
packages = [{include = "csp"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
lightning = "^2.1.3"
torchmetrics = "^1.3.0.post0"
wandb = "^0.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
